crates/cli/tests/snapshots/deactivate_test__deactivate__teardown_only_if_not_activated.snap
---
source: crates/cli/tests/deactivate_test.rs
expression: "get_deactivate_output(&assert, &sandbox)"
---
# Dropping the shadow restores the builtin, which is all a POSIX shell has
unset -f cd
unset -f proto_activate
unset -f proto_deactivate
