crates/cli/tests/snapshots/deactivate_test__deactivate__unsets_env_and_aliases-11.snap
---
source: crates/cli/tests/deactivate_test.rs
expression: "get_deactivate_output(&assert, &sandbox)"
---
# Dropping the shadow restores the builtin, which is all a POSIX shell has
unset -f cd
unset -f proto_activate
unset -f proto_deactivate
unset PROTO_HOME;
unset KEY1;
unset KEY2;
unalias pn;
unalias yn;
unset _PROTO_ACTIVATED_ENV;
unset _PROTO_ACTIVATED_ALIASES;
unset _PROTO_ACTIVATED_PATH;
