crates/cli/tests/snapshots/deactivate_test__deactivate__unsets_env_and_aliases-12.snap
---
source: crates/cli/tests/deactivate_test.rs
expression: "get_deactivate_output(&assert, &sandbox)"
---
del $PROTO_HOME
del $KEY1
del $KEY2
del aliases["pn"]
del aliases["yn"]
del $_PROTO_ACTIVATED_ENV
del $_PROTO_ACTIVATED_ALIASES
del $_PROTO_ACTIVATED_PATH
