crates/cli/tests/snapshots/deactivate_test__deactivate__unsets_env_and_aliases-8.snap
---
source: crates/cli/tests/deactivate_test.rs
expression: "get_deactivate_output(&assert, &sandbox)"
---
export-env {
    let entry = { code: "proto_activate" }
    let apply = { code: '# proto_activate apply
const proto_activate_file = $"($nu.temp-dir)/proto_activate-($nu.pid).nu"
source $proto_activate_file
"" | save --force $proto_activate_file' }

    $env.config = ($env.config | upsert hooks.env_change.PWD (
        (($env.config | get --optional hooks.env_change.PWD) | default []) | where { |it| $it != $entry }
    ))

    # The entry that applies the function's statements goes too: the handler
    # may have written a fresh activation on this very prompt, and left alone
    # it would resurrect the environment right after teardown
    $env.config = ($env.config | upsert hooks.pre_prompt (
        (($env.config | get --optional hooks.pre_prompt) | default []) | where { |it| $it != $entry and $it != $apply }
    ))
}
hide proto_activate
hide proto_deactivate
hide-env --ignore-errors PROTO_HOME
hide-env --ignore-errors KEY1
hide-env --ignore-errors KEY2
hide pn
hide yn
hide-env --ignore-errors _PROTO_ACTIVATED_ENV
hide-env --ignore-errors _PROTO_ACTIVATED_ALIASES
hide-env --ignore-errors _PROTO_ACTIVATED_PATH
